# jsongrep

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SESSION.md  justfile
.github/: pull_request_template.md
.github/workflows/: deploy-playground.yml  homebrew-release.yml  release.yml  rust.yml
benches/: README.md  query.rs
document_parse/jmespath_variable/report/: index.html
document_parse/large/report/: index.html
document_parse/report/: index.html
end_to_end_large/report/: index.html
end_to_end_medium/report/: index.html
end_to_end_small/report/: index.html
end_to_end_xlarge/report/: index.html
examples/: parse_and_query.rs  query_builder.rs
images/: logo.txt
playground/: .gitignore  README.md  index-xszdjkqh.js  index-xszdjkqh.js.map  index-zs24t4ff.js  index-zs24t4ff.js.map  index.html  jsongrep_wasm.core.wasm  package.json
playground/src/: App.tsx  Playground.tsx  index.css  index.html  index.ts
playground/wasm/: Cargo.toml  build.sh  sanity-check.sh
playground/wasm/src/: lib.rs
query_compile/report/: index.html
query_search_large/report/: index.html
query_search_medium/report/: index.html
query_search_small/report/: index.html
query_search_xlarge/report/: index.html
report/: index.html
src/: cli.rs  commands.rs  lib.rs  main.rs  query.rs  schema.rs  tokenizer.rs  utils.rs
src/commands/: generate.rs
src/query/: ast.rs  common.rs  dfa.rs  nfa.rs  parser.rs  predicate.rs
src/tokenizer/: lexer.rs  token.rs
tests/: cli.rs  lib.rs
tests/data/: openapi_paths.json  simple.json
(+3331 files in other folders)
