[package]
name = "jsongrep"
version = "0.4.0"
authors = ["Micah Kepe <micahkepe@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/micahkepe/jsongrep"
homepage = "https://github.com/micahkepe/jsongrep"
description = "A JSONPath-inspired query language for JSON documents"
categories = ["command-line-utilities", "text-processing"]
exclude = [
  ".github/",
  "examples/",
  "images/"
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.8"
log = "0.4.27"
pest = "2.8.1"
pest_derive = "2.8.1"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
clap_mangen = "0.2.29"
clap_complete = "4.5.57"
regex = "1.12.2"

[lints.clippy]
# See: <https://rust-lang.github.io/rust-clippy/master/index.html.
all = { level = "warn" }
pedantic = { level = "warn" }
nursery = { level = "warn" }

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
path = "src/main.rs"
name = "jg"

[[test]]
name = "cli"
path = "tests/cli.rs"

